[package]
name = "lool"
version = "0.3.0"
edition = "2021"
description = "🧳 lool » lucode.ar rust common utilities"
authors = ["Lucas Colombo <lucas@lucode.ar>"]
repository = "https://github.com/lucodear/lool/tree/master/lib/sched"
license = "MIT"

[profile.release]
strip = true
lto = true
codegen-units = 16
opt-level = 'z'
panic = "abort"
rpath = false
overflow-checks = false
debug = 0
debug-assertions = false

[lib]
path = "lib/lib.rs"

[features]
# cli utilities
"cli" = []
"cli.stylize" = ["cli", "dep:bitflags"]
# logging
"logger" = ["dep:log"]
# macros
"macros" = []
# scheduling
"sched" = ["dep:chrono", "dep:log"]
"sched.tokio" = [
    "sched",
    "dep:tokio",
    "tokio?/time",
    "tokio?/rt",
    "tokio?/macros",
    "tokio?/sync",
]
"sched.threads" = ["sched"]
"sched.rule-recurrence" = ["sched", "dep:num-traits"]
"sched.rule-cron" = ["sched", "dep:croner"]
# utils
"utils" = []
"utils.threads" = ["utils", "macros", "dep:log"]


[dependencies]
# default
eyre = { version = "0.6.12", default-features = false }

# optional
bitflags = { version = "2.5.0", optional = true }
chrono = { version = "0.4.37", optional = true }
log = { version = "0.4.21", optional = true }
tokio = { version = "1.37.0", optional = true }
croner = { version = "2.0.4", optional = true }
num-traits = { version = "0.2.18", optional = true }
tokio_schedule = "0.3.1"
glob-match = "0.2.1"


[[example]]
name = "sched"
path = "examples/sched.rs"
required-features = ["sched.threads", "sched.rule-recurrence"]

[[example]]
name = "sched_tokio"
path = "examples/sched_tokio.rs"
required-features = ["sched.tokio", "sched.rule-recurrence"]
